<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/movies"
        android:enabled="true"
        android:icon="@drawable/movie_icon"
        android:title="@string/movies"/>
    <item
        android:id="@+id/premium"

        android:icon="@drawable/premium_icon"
        android:title="@string/Premium"/>
    <item

        android:id="@+id/profile"

        android:icon="@drawable/profile_icon"
        android:title="@string/profile"/>
    <item
        android:id="@+id/setting"

        android:icon="@drawable/setting_icon"
        android:title="@string/setting"/>
</menu>